force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_TypeOfUnmeteredConnection__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TypeOfUnmeteredConnection__c</fullName>
    <description>Field used to store the type of unmetered connection
Used in LV Service Termination Survey forms</description>
    <label>Type of unmetered connection?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Street lamp</fullName>
            </value>
            <value>
                <fullName>Feeder/link pillar</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>Traffic lights/signs</fullName>
            </value>
            <value>
                <fullName>Telephone/broadband cabinet</fullName>
            </value>
            <value>
                <fullName>Advertising hoarding/bus shelters</fullName>
            </value>
            <value>
                <fullName>Internal substation lighting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Street lighting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>