force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_VoltageLVSTerminationSurface__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VoltageLVSTerminationSurface__c</fullName>
    <description>Field used to store the voltage at LV Service Termination surface
Used in LV Service Termination Survey forms</description>
    <label>Voltage at LV s. termination surface</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>