force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_VoltageViolation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VoltageViolation__c</fullName>
    <description>Field used to display if there was a Voltage Violation
Used in LV Service Termination Survey forms</description>
    <label>Voltage violation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Under</fullName>
            </value>
            <value>
                <fullName>Over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>