force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_VulnerablePerson__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VulnerablePerson__c</fullName>
    <description>Field to capture if the customer is a vulnerable person
Used in RATOV forms</description>
    <label>Vulnerable Person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>