force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_WhichTypeOfCabinet__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WhichTypeOfCabinet__c</fullName>
    <description>Field used to store the type of cabinet
Used in LV Service Termination Survey forms</description>
    <label>Which type of cabinet is it?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vodaphone</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>