force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to store the work order related to the form</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Customer Service Forms</relationshipLabel>
    <relationshipName>Customer_Service_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>