force-app/main/default/objects/SPEN_CustomerServiceForm__c/recordTypes/SPEN_CustomerHandshake.recordType-meta.xml
<RecordType>
    <fullName>SPEN_CustomerHandshake</fullName>
    <active>true</active>
    <description>Record type used for identifying the Customer Handshake forms</description>
    <label>Customer Handshake</label>
</RecordType>