force-app/main/default/objects/SPEN_CustomerServiceForm__c/recordTypes/SPEN_LVServiceTerminationSurvey.recordType-meta.xml
<RecordType>
    <fullName>SPEN_LVServiceTerminationSurvey</fullName>
    <active>true</active>
    <description>Record type used for identifying the LV Service Termination Surveys</description>
    <label>LV cut out inspection</label>
</RecordType>