force-app/main/default/objects/SPEN_CustomerServiceForm__c/recordTypes/SPEN_RATOV.recordType-meta.xml
<RecordType>
    <fullName>SPEN_RATOV</fullName>
    <active>true</active>
    <description>Record type used to identify the RATOV forms</description>
    <label>RATOV</label>
</RecordType>