force-app/main/default/objects/SPEN_CustomerServiceForm__c/listViews/LV_Termination_Survey.listView-meta.xml
<ListView>
    <fullName>LV_Termination_Survey</fullName>
    <columns>NAME</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_PurposeOfUndertakingSurvey__c</columns>
    <columns>SPEN_SupplyType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_CustomerServiceForm__c.SPEN_LVServiceTerminationSurvey</value>
    </filters>
    <label>LV cut out inspection</label>
</ListView>