force-app/main/default/objects/SPEN_CustomerServiceForm__c/listViews/RATOV.listView-meta.xml
<ListView>
    <fullName>RATOV</fullName>
    <columns>NAME</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_ReferenceNumber__c</columns>
    <columns>SPEN_TypeOfIncident__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_CustomerServiceForm__c.SPEN_RATOV</value>
    </filters>
    <label>RATOV</label>
</ListView>