force-app/main/default/objects/SPEN_CustomerServiceForm__c/listViews/SPEN_CustomerHandshake.listView-meta.xml
<ListView>
    <fullName>SPEN_CustomerHandshake</fullName>
    <columns>NAME</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_CaseReferenceNumber__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_CustomerServiceForm__c.SPEN_CustomerHandshake</value>
    </filters>
    <label>Customer handshake</label>
</ListView>